doc/_static/css/custom.css
:root {
    --color-emphasis: #73c054;

    --color-sidebar-bg-light: #2b2b2b;
    --color-sidebar-bg-dark: #171716;

    --color-main-bg-light: #f2f2f2;
    --color-main-bg-dark: #202020;
}

body {
    counter-reset: listing;
}
/* TOC - Main landing page */
/* Show two columns if screen is wide enough */
@media screen and (min-width: 700px) {
    /* For regular items */
    .toctree-wrapper > ul {
        columns: 2;
    }
    /* For Social and Learning Resources sections */
    .toc-outside-links {
        columns: 2;
    }
}


/* Sidebar + top left logo area */
.wy-side-nav-search,
.wy-nav-side {
    background-color: var(--color-sidebar-bg-light) !important;
}
html[data-theme="dark"] .wy-side-nav-search,
html[data-theme="dark"] .wy-nav-side {
    background-color: var(--color-sidebar-bg-dark) !important;
}


/* Sidebar big headers. */
.wy-menu-vertical p.caption {
    color: var(--color-emphasis);
}

/* 1st level sections */
html[data-theme="dark"] .wy-menu-vertical li.current > a {
    background-color: var(--color-main-bg-dark) !important;
}
html[data-theme="dark"] .wy-menu-vertical li.toctree-l2 a {
    background-color: #131313 !important;
}
/* 2nd level sections */
html[data-theme="dark"] .wy-menu-vertical li.toctree-l2.current a {
    background-color: #222222 !important;
}
/* 3rd level sections */
html[data-theme="dark"] .wy-menu-vertical li.toctree-l2.current li.toctree-l3 > a {
    background-color: #222222 !important;
    border-right: currentcolor;
}

/* Fix nav tree item visibility for API reference page titles */
.toctree-l3 code,
html[data-theme="dark"] .toctree-l3 code {
    background: none;
    border: none;
    font-size: 90%;
}


/* The main content area */
.wy-nav-content {
    background-color: var(--color-main-bg-light);
}
html[data-theme="dark"] .wy-nav-content {
    background-color: var(--color-main-bg-dark) !important;
}


/* The area under main content, when content doesn't fill the full height of the window */
.wy-nav-content-wrap {
    background-color: #e8e8e8;
}
html[data-theme="dark"] .wy-nav-content-wrap {
    background-color: #252525 !important;
}


/* Mobile top header bar. */
.wy-nav-top,
.wy-nav-top a {
    color: var(--color-emphasis) !important;
    background-color: var(--color-sidebar-bg-light) !important;
}
html[data-theme="dark"] .wy-nav-top,
html[data-theme="dark"] .wy-nav-top a {
    color: var(--color-emphasis) !important;
    background-color: var(--color-sidebar-bg-light) !important;
}


/* Remove RTD "home" icon (small house) before page logo text. */
.wy-side-nav-search .icon-home::before {
    content: none;
}

/* Redesign the top-left logo area. */
.wy-side-nav-search .icon-home {
    display: flex;
    flex-direction: column-reverse;
    align-items: center;

    padding: 16px 12px;
    padding-bottom: 32px;

    color: var(--color-emphasis) !important;

    border-radius: 16px;
}
.wy-side-nav-search .icon-home img.logo {
    margin: 0 !important;
    padding: 0;
    max-width: 100px;
    padding-bottom: 16px;
}
.wy-side-nav-search > div.version {
    font-size: 85%;
    /* Same monospace as our `pre` blocks */
    font-family: SFMono-Regular,Menlo,Monaco,Consolas,Liberation Mono,Courier New,Courier,monospace;
    margin-top: -38px;
    margin-bottom: 24px;
}


/* Center the page on desktop screens for better readability. */
@media screen and (min-width: 768px) {
    .wy-nav-content {
        max-width: 900px;
    }

    /* Page background behind centered area, visible on wide screens. */
    .wy-body-for-nav {
        position: relative;
        max-width: 1200px;
        margin: 0 auto;
        background-color: #cbd0c7;

        /* Subtle box shadow to make the content "pop" when centered. */
        box-shadow: 0px 0px 12px 0px rgba(0,0,0,0.70);
        -webkit-box-shadow: 0px 0px 12px 0px rgba(0,0,0,0.70);
        -moz-box-shadow: 0px 0px 12px 0px rgba(0,0,0,0.70);
    }
    html[data-theme="dark"] .wy-body-for-nav {
        background-color: #262826;
    }

    /* Required extra rules for navigation & revision flyout to center everything. */
    .wy-nav-side,
    .rst-versions {
        left: inherit;
    }
}


/*
 * Togglable sidebar sections functionality.
 *
 * Directly adapted from Godot's own custom RDT code:
 * https://github.com/godotengine/godot-docs/blob/master/_static/css/custom.css
 *
 * <sidebar_toggle>
 */
.wy-menu-vertical p.caption {
    cursor: pointer;
}
.wy-menu-vertical p.caption.active {
    background-color: var(--navbar-category-active-color);
}
.wy-menu-vertical p.caption:hover {
    background-color: var(--navbar-background-color-hover);
}
.wy-menu-vertical p.caption.active .caption-text:before {
    transform: rotate(90deg);
}
.wy-menu-vertical p.caption .caption-text:before {
    content: "❯";
    display: inline-block;
    margin-left: -4px;
    transition: transform 0.2s;
    width: 16px;
    height: 32px;
    transform-origin: 2px 16px;
}
.wy-menu-vertical p.caption + ul {
    display: none;
}
.wy-menu-vertical p.caption + ul.active {
    display: block;
}
/* </sidebar_toggle> */


/* Wrap individual main page items for easier group manipulation
 of contents and images. See PR #2027 for main page css changes */
.main-page-item-wrapper {
    align-items: flex-start;
    display: flex;
    margin: 10px;
}
.main-page-item-wrapper > .toctree-wrapper {
    width: 100%;
}

/* single-col-box for items on main page with 2 bullet points, use if
 wanting to avoid having 2 columns with 1 item each inside */
.main-page-item-wrapper > .single-col-box {
    width: 100%;
}
.main-page-item-wrapper > .single-col-box ul {
    columns: 1;
}

/* For Social and Learning Resources to make
title + list appear like other categories */
.main-page-item-wrapper > .main-page-item-sub-wrapper {
    display: flex;
    flex-direction: column;
    margin: 0px;
    width: 100%;
}
.main-page-item-wrapper > .main-page-item-title {
    width: 100%;
}
.main-page-item-title > p {
    font-size: var(--font-size--small);
    margin-bottom: 0;
    text-align: initial;
    text-transform: uppercase;
}
.main-page-item-sub-wrapper > .toc-outside-links {
    margin-left: 0px;
    width: 100%;
}

/* Wrappers and formatting for sprinter, START HERE, github star button
to align them neatly */
.main-page-item-wrapper-header {
    align-items: center;
    display: flex;
    margin: 10px;
}
.main-page-box {
    width: 100%;
    display: flex;
    justify-content: space-between;
    align-items: center;
}
.main-page-box > .main-page-link {
    display: flex;
    width: 100%;
}
.main-page-box > .main-page-link a {
    display: flex;
}
.sprinter-box {
    margin-left: 10px;
    height: 55px;
    display: flex;
}
.start-here-box {
    align-items: center;
    display: flex;
    margin-left: -10px;
}
/* #the-python-arcade-library h2 {
    font-size: var(--font-size--small);
    font-weight: 400;
    margin-bottom: 0;
    margin-top: .5rem;
    text-align: initial;
    text-transform: uppercase;
    width: 100%;
    display: flex;
} */
.main-page-box > .main-page-box-gh {
    display: flex;
    align-items: center;
    margin-right: 0px;
}
#github-stars {
    width: 141px;
    height: 30px;
    margin-bottom: -9px;
}

/* Formatting for list items */
.toctree-l1 {
    margin-left: 5px;
}
.toctree-wrapper a {
    text-decoration: none;
}
.toctree-wrapper a:hover {
    text-decoration: underline;
}
#the-python-arcade-library ul {
    margin-top: 0;
    margin-bottom: 0;
}
.heading-icon {
    columns: 2;
    position: relative;
    left: -20px;
    top: -4px;
    float: left;
    width: 55px;
}

/* Put logo next to text */
.sidebar-brand {
  flex-direction: row;
}
.sidebar-logo-container {
  flex: 1;
}
.sidebar-brand-text {
  flex: 3;
}
/* Example code section */
#how-to-example-code section {
	display: flex;
	flex-direction: row;
	flex-wrap: wrap;
}
#how-to-example-code section h2 {
  width: 100%;
}
#how-to-example-code section h3 {
  width: 100%;
}
/* Right side image, for longer text */
img.right-image {
   float: right;
   margin-left: 8px;
   margin-bottom: 4px;
   margin-top: 10px;
}
.section-header {
    display: flex;
}
.section-logo-div {
    display: block;
    width: 80px;
}
.section-title {
    display: block;
}
.section-title h2 {
    margin-top: 0.25em;
}
.section-logo {
    width: 78px;
    padding-right: 15px;
}
.vimeo-video {
    border: 0;
    position:absolute;
    top:0;
    left:0;
    width:100%;
    height:100%;
}
/* Make signatures look nice */
.sig:not(.sig-inline) {
    /* Highlight even when not hovering */
    background: var(--color-api-background-hover);
}
/* Make Function API look nice */
.sig-param .n:first-of-type {
    margin-left: 10px;
}
.sig-param::before {
    content: '\A  ';
    white-space: pre;
    margin-left: 10px;
}
/* Make code look nice */
.code-block-caption::before {
    counter-increment: listing;
    content: "Listing " counter(listing) ":\00a0 ";
}
.code-block-caption {
    font-family: 'Consolas', 'courier new', 'courier', monospace;
    font-size: 15px;
}
/* Datatable - mostly for quick api index */
table.dataTable.display tbody tr.odd {
    background-color: var(--color-background-primary);
}
table.dataTable.display tbody tr.even {
    background-color: var(--color-background-secondary);
}
table.dataTable.display tbody tr.odd > .sorting_1 {
    background-color: var(--color-background-primary);
}
table.dataTable.display tbody tr.even > .sorting_1 {
    background-color: var(--color-background-secondary);
}
.dataTables_wrapper .dataTables_filter {
    color: var(--color-foreground-primary);
}

/* Named color chart */
table.colorTable {
    border-spacing: 5px;
}
table.colorTable tr > td:nth-child(3) {
    border: 1px solid black;
}
table.colorTable tr > td:nth-child(3) > div {
    display: block;
    width: 80px;
    min-width: 80px;
}
/* Custom code syntax highlighting */
body:not([data-theme="light"]) .highlight .c1 {
    color: #48A148;
}
.highlight .c1 {
    color: #007507;
}

.checkered {
    background-image: url(../checkered.png);
    background-repeat: repeat;
    margin:0px;
    padding: 0px;
}

